--- a/src/assets/styles/landingpage.scss
+++ b/src/assets/styles/landingpage.scss
@@ -4,17 +4,17 @@
     justify-content: space-between;
     margin-top: 45px;
     font-size: 15px;
-  }
-  
-  .navbar {
+}
+
+.navbar {
     h5 {
-      letter-spacing: 0.5px;
-      cursor: pointer;
-      font-weight: 300;
+        letter-spacing: 0.5px;
+        cursor: pointer;
+        font-weight: 300;
     }
-  }
-  
-  .bg-circle-1 {
+}
+
+.bg-circle-1 {
     height: 200px;
     width: 200px;
     border-radius: 121px;
@@ -23,115 +23,209 @@
     top: -11px;
     left: -59px;
     transform: rotate(-12deg);
-  }
-  
-  .top-hero-section {
+    z-index: -1;
+    filter: blur(28px);
+}
+
+.bg-circle-2 {
+    height: 200px;
+    width: 200px;
+    border-radius: 121px;
+    background: linear-gradient(180deg, #330969 0%, rgba(145, 121, 176, 0) 100%);
+    position: absolute;
+    top: 451px;
+    right: -100px;
+    transform: rotate(-12deg);
+    z-index: -1;
+    filter: blur(28px);
+}
+
+.top-hero-section {
     display: flex;
     justify-content: space-between;
     height: 400px;
     align-items: center;
     margin-top: 15px;
+
     .top-hero-section_left {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: flex-start;
-      row-gap: 10px;
-  
-      h3, h5 {
-        font-weight: 600;
-        font-size: 30px;
-        text-align: left;
-        line-height: 46px;
-        width: 400px;
-        margin: 0px;
-      }
-  
-      h5{
-        font-weight: 300;
-        font-size: 13px;
-        margin: -3px 0px 10px 0px;
-      }
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        row-gap: 10px;
+
+        h3,
+        h5 {
+            font-weight: 600;
+            font-size: 30px;
+            text-align: left;
+            line-height: 46px;
+            width: 400px;
+            margin: 0px;
+        }
+
+        h5 {
+            font-weight: 300;
+            font-size: 13px;
+            margin: -3px 0px 10px 0px;
+        }
     }
-  }
-  
-  .welcome-code-section {
+}
+
+.welcome-code-section {
     width: 418px;
     height: 310px;
     background: #100123;
-    box-shadow:0px 4px 52px 11px #220242;
+    // box-shadow:0px 4px 52px 11px #220242, inset -4px 12px 8px 2px #0c001c;
+    box-shadow: 0px 4px 52px 11px #220242, inset -4px 12px 8px 2px #0c001c;
     border-radius: 10px;
     position: relative;
     box-sizing: border-box;
     padding: 0px 25px 0px 30px;
     display: flex;
     justify-content: flex-start;
-  
+
     .welcome-code-icon-1,
     .welcome-code-icon-2,
     .welcome-code-icon-3 {
-      height: 13px;
-      width: 14px;
-      border-radius: 10px;
-      position: absolute;
-      top: 25px;
-      left: 25px;
+        height: 13px;
+        width: 14px;
+        border-radius: 10px;
+        position: absolute;
+        top: 25px;
+        left: 25px;
     }
-  
+
     .welcome-code-icon-1 {
-      background: #a40000;
+        background: #a40000;
     }
+
     .welcome-code-icon-2 {
-      background: #c39622;
-      left: 50px;
+        background: #c39622;
+        left: 50px;
     }
+
     .welcome-code-icon-3 {
-      background: #0c9000;
-      left: 75px;
+        background: #0c9000;
+        left: 75px;
     }
-  
+
     .welcome-typing-text {
-      margin-top: 45px;
-      text-align: left;
-      font-weight: 400;
-  
-      h5 {
-        font-size: 13px;
-        font-weight: 300;
-      }
+        margin-top: 45px;
+        text-align: left;
+        font-weight: 400;
+
+        h5 {
+            font-size: 13px;
+            font-weight: 300;
+        }
     }
-  }
-  
-  .welcome-code-section::after {
+}
+
+.welcome-code-section::after {
     content: "";
-      position: absolute;
-      background: #3a0067;
-      filter: blur(62px);
-      border-radius: 33px;
-      height: 33px;
-      width: 534px;
-      bottom: -42px;
-      left: -51px;
-      /* border: solid 10px orange; */
-      z-index: -1;
-  }
-  .fade-out-enter-active,
-  .fade-out-leave-active {
+    position: absolute;
+    background: #3a0067;
+    filter: blur(62px);
+    border-radius: 33px;
+    height: 33px;
+    width: 534px;
+    bottom: -42px;
+    left: -51px;
+    /* border: solid 10px orange; */
+    z-index: -1;
+}
+
+.fade-out-enter-active,
+.fade-out-leave-active {
     transition: opacity 0.5s ease;
-  }
-  
-  .fade-out-enter-from,
-  .fade-out-leave-to {
+}
+
+.fade-out-enter-from,
+.fade-out-leave-to {
     opacity: 0;
-  }
-  
-  .welcome-code-explanation {
+}
+
+.welcome-code-explanation {
     margin-top: 0px;
-  }
-  
-  .about-us{
-    h2{
-      text-align: center;
-      font-weight: 600;
+}
+
+.about-us {
+    h2 {
+        text-align: center;
+        font-weight: 600;
     }
-  }
+
+    article {
+        display: flex;
+        justify-content: space-between;
+
+        .about-us-point {
+            box-shadow: 0px 12px 8px #05000b;
+            height: 265px;
+            width: 220px;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.0576) 0%, rgba(87, 55, 119, 0.1008) 100%);
+            border-radius: 16px;
+            filter: brightness(3.5);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            // place-items: center;
+            box-sizing: border-box;
+            padding: 0px 24px;
+            row-gap: 10px;
+
+            img {
+                filter: brightness(0.3);
+                width: 60px
+            }
+
+            h5,
+            h6 {
+                margin: 0px;
+                font-weight: 400;
+                text-align: center;
+            }
+
+            h6 {
+                font-weight: 300;
+            }
+        }
+    }
+}
+
+.learning-quote {
+    h4 {
+        text-align: center;
+        font-size: 19px;
+        width: 396px;
+        font-weight: 400;
+        margin: auto;
+        margin-top: 70px;
+        line-height: 31px;
+    }
+
+    h5 {
+        width: 600px;
+        font-weight: 300;
+        margin: auto;
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .quote-shadow {
+        background-color: #8F00FF;
+        width: 500px;
+        height: 5px;
+        border-radius: 91px;
+        margin: auto;
+        margin-top: 69px;
+        filter: blur(38px) opacity(0.8);
+    }
+
+    .get-started-btn{
+        margin: auto;
+        margin-top: 35px;
+    }
+}
