Working on error handling

--- a/src/assets/styles/landingpage.scss
+++ b/src/assets/styles/landingpage.scss
@@ -304,6 +304,7 @@
         font-size: 21px;
         font-weight: 500;
         margin-bottom: 25px;
+        width: 356px;
       }
 
       .already-have-account {
