--- a/src/assets/styles/landingpage.scss
+++ b/src/assets/styles/landingpage.scss
@@ -153,6 +153,11 @@
   margin-top: 0px;
 }
 
+#landing-page-app {
+  max-width: 1010px;
+  margin: 0 auto;
+}
+
 .about-us {
   h2 {
     text-align: center;
